<resources>
    <string name="app_name">Open eClass Client</string>
    <string name="darth_plagueis" translatable="false">Did you ever hear the tragedy of Darth Plagueis The Wise? I thought not. It’s not a story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful and so wise he could use the Force to influence the midichlorians to create life… He had such a knowledge of the dark side that he could even keep the ones he cared about from dying. The dark side of the Force is a pathway to many abilities some consider to be unnatural. He became so powerful… the only thing he was afraid of was losing his power, which eventually, of course, he did. Unfortunately, he taught his apprentice everything he knew, then his apprentice killed him in his sleep. Ironic. He could save others from death, but not himself.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_server">Select Server</string>
    <string name="login">Login</string>
    <string name="home_tab">Home</string>
    <string name="announcements_tab">Announcements</string>
    <string name="courses_tab">Courses</string>
    <string name="calendar_tab">Calendar</string>
    <string name="search_server">Search Servers</string>
    <string name="HomeTabProfileIcon">User Profile Picture</string>
    <string name="Administrators">Administrators</string>
    <string name="server_url">Server Url</string>
    <string name="connect">Connect</string>
    <string name="select_server_from_list">Select Server From List</string>
    <string name="sch">Greek School Network</string>
    <string name="greek_school_network_eclass_logo_description">Greek School Network Eclass Logo</string>
    <string name="serverSelectLabel">Select Server</string>
    <string name="InternalAuthLabel">InternalAuth</string>
    <string name="AboutLabel">About</string>
    <string name="ExternalAuthLabel">ExternalAuth</string>
    <string name="select_authentication_method">Select Authentication Method</string>
    <string name="log_out">Log Out</string>
    <string name="menu_refresh">Refresh</string>
    <string name="read_more">Read More</string>
    <string name="your_session_has_expired">Your session has expired</string>
    <string name="dismiss">Dismiss</string>
    <string name="re_login">Re Login</string>
    <string name="select_calendar">Select Calendar</string>
    <string name="sync">Sync</string>
    <string name="delete">Delete</string>
    <string name="choose_server">Choose Server</string>
    <string name="server_list">Institution List</string>
    <string name="or_manually_insert_an_url">Didn\'t find your server? Insert the url manually here</string>
    <string name="wrong_url">Wrong Url</string>
    <string name="no_results_found">No Results Found</string>
    <string name="wrong_username_password">Wrong Username And/Or Password</string>
    <string name="server_not_enabled">Server is disabled by its administrators</string>
    <string name="connection_error">Connection Error</string>
    <string name="newTag">New</string>
    <string name="about">About</string>
    <string name="tool_docs">Documents</string>
    <string name="tool_announcements">Announcements</string>
    <string name="tool_exercise">Exercises</string>
    <string name="tool_gradebook">Grades</string>
    <string name="tool_glossary">Glossary</string>
    <string name="tool_mindmap">Mind Map</string>
    <string name="tool_assignments">Assignments</string>
    <string name="tool_questionnaire">Questionnaires</string>
    <string name="tool_calendar">Calendar</string>
    <string name="tool_blog">Blog</string>
    <string name="tool_dropbox">Messages</string>
    <string name="tool_groups">User Groups</string>
    <string name="tool_attendance">Attendance</string>
    <string name="tool_videos">Media</string>
    <string name="tool_fa_trophy">Progress</string>
    <string name="tool_forum">Forum</string>
    <string name="tool_links">Links</string>
    <string name="tool_fa_list">Wall</string>
    <string name="tool_conference">Chat</string>
    <string name="tool_fa_commenting">Chat</string>
    <string name="tool_lp">Learn Path</string>
    <string name="tool_ebook">eBook</string>
    <string name="tool_wiki">Wiki</string>
    <string name="select_other_institutions">Or select any other institution from the included list below</string>
    <string name="select_greek_school_network">Are you a Greek School Student? Connect to the Greek School Network</string>
    <string name="EditCourses">Edit Courses</string>

</resources>
